<resources>
    <string name="app_name">PasaFit</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="email_or_username">Email/Username</string>
    <string name="onboard_welcome_header">WELCOME TO PASAFIT</string>
    <string name="onboard_welcome_text">Your ultimate fitness companion. Experienced or beginner, we\'re with you every step.</string>
    <string name="onboard_get_started_button">Get Started</string>
    <string name="content_description">resource</string>
    <string name="copyright">© 2024 Team Pasaron. All rights reserved.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="reenter_password">Confirm Password</string>
    <string name="placeholder">Lorem ipsum…</string>
    <string name="login_message">Log In to your Account</string>
    <string name="register_message">Create your Account</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_dashboard">Hello, User!</string>
    <string name="fitness_calculator_header">Fitness Calculator</string>"
    <string name="fitness_calculator_select">Select a fitness calculator to get started.</string>
    <string name="txt_calc_bmi">Calculate BMI</string>
    <string name="txt_calc_bmi_tooltip">Calculate your Body Mass Index</string>
    <string name="txt_calc_bmr">Calculate BMR</string>
    <string name="txt_calc_bmr_tooltip">Calculate your Basal Metabolic Rate</string>
    <string name="txt_calc_bfat">Calculate Body Fat</string>
    <string name="txt_calc_bfat_tooltip">Calculate your Body Fat Percentage</string>
    <string name="txt_calc_ibw">Calculate IBW</string>
    <string name="txt_calc_ibw_tooltip">Calculate IBW</string>
    <string name="txt_calc_ideal_weight_tooltip">Calculate your Ideal Weight</string>
    <string name="choose_category">Choose Category</string>
    <string name="left_arrow">&lt;</string>
    <string name="right_arrow">&gt;</string>
    <string name="category_strength">Strength</string>
    <string name="category_endurance">Endurance</string>
    <string name="category_balance">Balance</string>
    <string name="category_flexibility">Flexibility</string>
    <string name="exercises">Exercises</string>
    <string name="exercise">Exercise</string>
    <string name="bmi_dashboard_title">Body Mass Index Calculator</string>
    <string name="bmi_input_age">Input Age</string>
    <string name="bmi_input_height">Input Height</string>
    <string name="bmi_input_weight">Input Weight</string>
    <string name="bmr_dashboard_title">Basal Metabolic Rate Calculator</string>
    <string name="bmr_input_age">Input Age</string>
    <string name="bmr_input_height">Input Height</string>
    <string name="bmr_input_weight">Input Weight</string>
    <string name="bodyfat_dashboard_title">Body Fat Calculator</string>
    <string name="idealweight_dashboard_title">Body Mass Index Calculator</string>
    <string name="na">NA</string>
    <string name="user_profile">User Profile</string>
    <string name="personal_info">Personal Information:</string>
    <string name="account_info">Account Information:</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="logout">Log Out</string>
    <string name="trackers">Trackers</string>
    <string name="step_tracker">Step Tracker</string>
    <string name="sleep_tracker">Sleep Tracker</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="zero">0</string>
    <string name="steps">Steps</string>
    <string name="miles">Miles: 0</string>
    <string name="minutes">Min: 0</string>
    <string name="kcal">Kcal: 0</string>
    <string name="bmi_info_full">BMI (Body Mass Index) is an estimate of body fat based on height and weight.</string>
    <string name="gender_select">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="result">Results will display here</string>
    <string name="centimeter">In centimeter</string>
    <string name="kilogram">In kilogram</string>
    <string name="age">In numbers (ex. 29)</string>
    <string name="bmr_info_full">BMR (Basal Metabolic Rate) is the number of calories required to keep your body functioning at rest.</string>
    <string name="exercise_title">Exercise Title</string>
    <string name="description">Description:</string>
    <string name="instructions">Instructions:</string>
    <string name="bodyfat_input_age">Input Age</string>
    <string name="bodyfat_input_height">Input Height</string>
    <string name="bodyfat_input_weight">Input Weight</string>
    <string name="bodyfat_input_waist">Input Waist</string>
    <string name="bodyfat_input_neck">Input Neck</string>
    <string name="bodyfat_input_hip">Input Hip</string>
    <string name="ibw_input_height">Input Height</string>
    <string name="ibw_input_age">Input Age</string>
    <string name="ibw_info_full">Ideal Body Weight (IBW) is the weight that is believed to be maximally healthful for a person, based on height and age.</string>
    <string name="ibw_dashboard_title">Ideal Body Weight Calculator</string>
    <string name="dashboard_video_info">Get moving and grooving! Regular exercise boosts your mood, strengthens your body, and keeps your mind sharp. Let\'s step it up!</string>
</resources>