<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    tools:context=".Fitness_Calculator">

    <TextView
        android:id="@+id/txtView_FitnessCalculatorTitle"
        android:layout_width="164dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"
        android:text="@string/fitness_calculator_header"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mainPadding"
        android:layout_width="385dp"
        android:layout_height="584dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="297dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="191dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/btn_calc_bmi"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/body" />

                        <TextView
                            android:id="@+id/txt_calc_bmi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:gravity="center"
                            android:onClick="@string/txt_calc_bmi_tooltip"
                            android:text="@string/txt_calc_bmi"
                            android:textColor="@color/white"
                            android:tooltipText="@string/txt_calc_bmi_tooltip" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/btn_calc_bmr"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_weight="1"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/metabolism__1_" />

                        <TextView
                            android:id="@+id/txt_calc_bmr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:gravity="center"
                            android:onClick="@string/txt_calc_bmr_tooltip"
                            android:text="@string/txt_calc_bmr"
                            android:textColor="@color/white"
                            android:tooltipText="@string/txt_calc_bmr_tooltip" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="290dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="190dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/btn_calc_bodyfat"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/fat" />

                        <TextView
                            android:id="@+id/txt_calc_bodyfat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:gravity="center"
                            android:onClick="@string/txt_calc_bfat_tooltip"
                            android:text="@string/txt_calc_bfat"
                            android:textColor="@color/white"
                            android:tooltipText="@string/txt_calc_bfat_tooltip" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/btn_calc_weight"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_gravity="center"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/human" />

                        <TextView
                            android:id="@+id/txt_calc_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contextClickable="false"
                            android:gravity="center"
                            android:onClick="@string/txt_calc_ideal_weight_tooltip"
                            android:text="@string/txt_calc_ibw"
                            android:textColor="@color/white"
                            android:tooltipText="@string/txt_calc_ibw_tooltip" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtView_FitnessCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/fitness_calculator_select"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/mainPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_FitnessCalculatorTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>