<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eerie_black"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".CalcBMI">

    <TextView
        android:id="@+id/txt_bmi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/bmi_dashboard_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="383dp"
        android:layout_height="576dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bmi_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="99dp">

                <TextView
                    android:id="@+id/bmi_info"
                    android:layout_width="372dp"
                    android:layout_height="51dp"
                    android:gravity="center"
                    android:text="@string/bmi_info_full"
                    android:textColor="@color/sea_green"
                    android:textStyle="italic"
                    tools:layout_editor_absoluteX="7dp"
                    tools:layout_editor_absoluteY="24dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_bmi_age"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/bmi_input_age"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/bmi_input_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/age"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:textColorHint="@android:color/holo_green_light" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_bmi_height_desc"
                        android:layout_width="31dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/bmi_input_height"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/bmi_input_height"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/centimeter"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:textColorHint="@android:color/holo_green_light" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_bmi_weight"
                        android:layout_width="59dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/bmi_input_weight"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/bmi_input_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/kilogram"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:textColorHint="@android:color/holo_green_light" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="102dp">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/bmi_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elegantTextHeight="true"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/result"
                android:textColor="@color/sea_green"
                android:textSize="36sp"
                tools:text="@string/result" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>